removed unnecessary dependencies 	modified:   animateSwarm/AnimateTools.py moved in examples directory 	renamed:    AnimateExamples.ipynb -> examples/AnimateExamples.ipynb added equivalent file which can just be run with 'python AnimateExamples.py' 	new file:   examples/AnimateExamples.py

--- a/examples/AnimateExamples.ipynb
+++ b/examples/AnimateExamples.ipynb
@@ -58,7 +58,7 @@
     "sizePred = sizePrey * 2\n",
     "name = 'Animation'\n",
     "cmap = plt.get_cmap('coolwarm') # alternatives 'bwr', 'Reds'\n",
-    "folder = Path.cwd()"
+    "folder = Path.cwd().parent"
    ]
   },
   {
